# Reversi

./: .gitignore  CMakeLists.txt  MCTSNode.cpp  MCTSNode.h  README.md  Reversi.cpp  Reversi.h  main.cpp  server.cpp  server.hpp
web/public/: index.html
web/src/: App.js  App.jsx
